Update index.html to add card library link

--- a/index.html
+++ b/index.html
@@ -56,11 +56,34 @@
       color: #555;
       margin: 5px 0;
     }
+    /* 戻るボタンのスタイル */
+    .back-to-home {
+      position: fixed;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+      background-color: #ffcc00;
+      color: black;
+      border: none;
+      padding: 15px 20px;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: background-color 0.3s, transform 0.3s;
+      z-index: 1000;
+    }
+    .back-to-home:hover {
+      background-color: #ffaa00;
+      transform: translateY(-50%) scale(1.1);
+    }
   </style>
 </head>
 <body>
   <h1>カードライブラリー</h1>
   <div id="card-container"></div>
+
+  <!-- 戻るボタン -->
+  <button class="back-to-home" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
 
   <script>
     fetch('./tap_dance_card_data_updated.json')
