--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
       padding: 20px 0;
       margin: 0;
     }
+    .menu-bar {
+      display: flex;
+      justify-content: center;
+      background-color: #444;
+      padding: 10px 0;
+    }
+    .menu-button {
+      background-color: #555;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin: 0 10px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .menu-button:hover {
+      background-color: #777;
+    }
     #card-container {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -24,39 +43,60 @@
       padding: 20px;
       justify-items: center;
     }
-    .card {
-      background-color: white;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      width: 200px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s;
+    .step-keyboard {
       display: flex;
-      flex-direction: column;
+      justify-content: space-around;
+      padding: 20px;
     }
-    .card:hover {
+    .step-section {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+      width: 45%;
+      background-color: #fff;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    .step-card {
+      background-color: #eee;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .step-card:hover {
       transform: scale(1.05);
+      background-color: #ddd;
     }
-    .card img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
+    #field {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+      padding: 20px;
+      background-color: #fafafa;
+      border-top: 2px solid #ccc;
     }
-    .card-content {
-      padding: 15px;
-      text-align: left;
+    .field-card {
+      background-color: #ddd;
+      border: 1px solid #bbb;
+      border-radius: 5px;
+      padding: 10px;
+      position: relative;
     }
-    .card h3 {
-      margin: 10px 0 5px;
+    .remove-btn {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      background-color: red;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
     }
-    .card p {
-      font-size: 0.9em;
-      color: #555;
-      margin: 5px 0;
-    }
-    /* 戻るボタンのスタイル */
     .back-to-home {
       position: fixed;
       top: 50%;
@@ -80,19 +120,39 @@
 </head>
 <body>
   <h1>カードライブラリー</h1>
-  <div id="card-container"></div>
+  <div class="menu-bar">
+    <button class="menu-button" onclick="showLibrary()">カードライブラリー</button>
+    <button class="menu-button" onclick="showStepKeyboard()">ステップキーボード</button>
+    <button class="menu-button" onclick="toggleFieldSize()">フィールドサイズ切替 (4x/8x)</button>
+  </div>
 
-  <!-- 戻るボタン -->
+  <div id="card-container"></div>
+  <div id="step-keyboard-container" style="display:none;">
+    <div class="step-keyboard">
+      <div class="step-section" id="left-foot"></div>
+      <div class="step-section" id="right-foot"></div>
+    </div>
+    <div id="field"></div>
+  </div>
+
   <button class="back-to-home" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
 
   <script>
+    let fieldSize = 4;
+
     fetch('./tap_dance_card_data_updated.json')
       .then(response => response.json())
-      .then(data => displayCards(data))
+      .then(data => {
+        window.cardData = data;
+        displayCards(data);
+      })
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
     function displayCards(cards) {
       const container = document.getElementById('card-container');
+      container.style.display = 'grid';
+      document.getElementById('step-keyboard-container').style.display = 'none';
+      container.innerHTML = '';
 
       cards.forEach(card => {
         const cardElement = document.createElement('div');
@@ -127,6 +187,69 @@
 
         container.appendChild(cardElement);
       });
+    }
+
+    function showLibrary() {
+      document.getElementById('card-container').style.display = 'grid';
+      document.getElementById('step-keyboard-container').style.display = 'none';
+    }
+
+    function showStepKeyboard() {
+      document.getElementById('card-container').style.display = 'none';
+      const keyboardContainer = document.getElementById('step-keyboard-container');
+      keyboardContainer.style.display = 'block';
+
+      const leftFoot = document.getElementById('left-foot');
+      const rightFoot = document.getElementById('right-foot');
+      leftFoot.innerHTML = '';
+      rightFoot.innerHTML = '';
+
+      window.cardData.forEach(card => {
+        if (card[' 足の種類'] === 'left') {
+          createStepCard(leftFoot, card);
+        } else if (card[' 足の種類'] === 'right') {
+          createStepCard(rightFoot, card);
+        }
+      });
+    }
+
+    function createStepCard(container, card) {
+      const stepCard = document.createElement('div');
+      stepCard.classList.add('step-card');
+      stepCard.textContent = `${card.部位} - ${card.動作}`;
+
+      stepCard.addEventListener('click', () => {
+        addToField(card);
+      });
+
+      container.appendChild(stepCard);
+    }
+
+    function addToField(card) {
+      const field = document.getElementById('field');
+      const fieldCard = document.createElement('div');
+      fieldCard.classList.add('field-card');
+      fieldCard.textContent = `${card.部位} - ${card.動作}`;
+
+      const removeBtn = document.createElement('button');
+      removeBtn.textContent = '×';
+      removeBtn.classList.add('remove-btn');
+      removeBtn.onclick = () => field.removeChild(fieldCard);
+
+      fieldCard.appendChild(removeBtn);
+      field.appendChild(fieldCard);
+
+      adjustFieldLayout();
+    }
+
+    function adjustFieldLayout() {
+      const field = document.getElementById('field');
+      field.style.gridTemplateColumns = `repeat(${fieldSize}, 1fr)`;
+    }
+
+    function toggleFieldSize() {
+      fieldSize = fieldSize === 4 ? 8 : 4;
+      adjustFieldLayout();
     }
   </script>
 </body>
