--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>カードライブラリー</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -17,46 +18,69 @@
       padding: 20px 0;
       margin: 0;
     }
+    .menu-bar {
+      display: flex;
+      justify-content: center;
+      background-color: #444;
+      padding: 10px 0;
+    }
+    .menu-button {
+      background-color: #555;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin: 0 10px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .menu-button:hover {
+      background-color: #777;
+    }
     #card-container {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 20px;
-      padding: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      gap: 10px;
+      padding: 10px;
       justify-items: center;
     }
-    .card {
-      background-color: white;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      width: 200px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s;
+    .step-keyboard {
       display: flex;
-      flex-direction: column;
+      justify-content: space-around;
+      padding: 20px;
     }
-    .card:hover {
-      transform: scale(1.05);
+    .step-section {
+      display: grid;
+      grid-template-rows: repeat(4, 1fr);
+      gap: 10px;
+      width: 50%;
+      background-color: #fff;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-    .card img {
+    .step-row {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      gap: 5px;
+    }
+    .step-card {
+      background-color: #eee;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 5px;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .step-card img {
       width: 100%;
       height: auto;
       object-fit: cover;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
     }
-    .card-content {
-      padding: 15px;
-      text-align: left;
+    .step-card:hover {
+      transform: scale(1.05);
+      background-color: #ddd;
     }
-    .card h3 {
-      margin: 10px 0 5px;
-    }
-    .card p {
-      font-size: 0.9em;
-      color: #555;
-      margin: 5px 0;
-    }
-    /* 戻るボタンのスタイル */
     .back-to-home {
       position: fixed;
       top: 50%;
@@ -80,19 +104,42 @@
 </head>
 <body>
   <h1>カードライブラリー</h1>
-  <div id="card-container"></div>
+  <div class="menu-bar">
+    <button class="menu-button" onclick="showLibrary()">カードライブラリー</button>
+    <button class="menu-button" onclick="showStepKeyboard()">ステップキーボード</button>
+  </div>
 
-  <!-- 戻るボタン -->
+  <div id="card-container"></div>
+  <div id="step-keyboard-container" style="display:none;">
+    <div class="step-keyboard">
+      <!-- 左ブロック -->
+      <div class="step-section" id="left-foot">
+        <div class="step-row" id="ball-row"></div>
+        <div class="step-row" id="heel-row"></div>
+        <div class="step-row" id="toe-row"></div>
+        <div class="step-row" id="stamp-row"></div>
+      </div>
+      <!-- 右ブロックのためのスペース確保 -->
+      <div class="step-section" id="right-foot"></div>
+    </div>
+  </div>
+
   <button class="back-to-home" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
 
   <script>
     fetch('./tap_dance_card_data_updated.json')
       .then(response => response.json())
-      .then(data => displayCards(data))
+      .then(data => {
+        window.cardData = data;
+        displayCards(data);
+      })
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
     function displayCards(cards) {
       const container = document.getElementById('card-container');
+      container.style.display = 'grid';
+      document.getElementById('step-keyboard-container').style.display = 'none';
+      container.innerHTML = '';
 
       cards.forEach(card => {
         const cardElement = document.createElement('div');
@@ -126,6 +173,38 @@
         cardElement.appendChild(cardContent);
 
         container.appendChild(cardElement);
+      });
+    }
+
+    function showLibrary() {
+      document.getElementById('card-container').style.display = 'grid';
+      document.getElementById('step-keyboard-container').style.display = 'none';
+    }
+
+    function showStepKeyboard() {
+      document.getElementById('card-container').style.display = 'none';
+      const keyboardContainer = document.getElementById('step-keyboard-container');
+      keyboardContainer.style.display = 'block';
+
+      const rows = {
+        'ball': document.getElementById('ball-row'),
+        'heel (stand)': document.getElementById('heel-row'),
+        'toe': document.getElementById('toe-row'),
+        'stamp': document.getElementById('stamp-row')
+      };
+
+      window.cardData.forEach(card => {
+        if (card[' 足の種類'] === 'left' && rows[card['部位']]) {
+          const cardElement = document.createElement('div');
+          cardElement.classList.add('step-card');
+
+          const img = document.createElement('img');
+          img.src = card.画像;
+          img.alt = card.カード名;
+
+          cardElement.appendChild(img);
+          rows[card['部位']].appendChild(cardElement);
+        }
       });
     }
   </script>
