--- a/index.html
+++ b/index.html
@@ -39,10 +39,44 @@
     }
     #card-container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
       gap: 10px;
       padding: 10px;
       justify-items: center;
+    }
+    .card {
+      background-color: white;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 80px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
+      display: flex;
+      flex-direction: column;
+    }
+    .card:hover {
+      transform: scale(1.05);
+    }
+    .card img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+    .card-content {
+      padding: 5px;
+      text-align: left;
+    }
+    .card h3 {
+      margin: 5px 0 3px;
+      font-size: 0.8em;
+    }
+    .card p {
+      font-size: 0.6em;
+      color: #555;
+      margin: 3px 0;
     }
     .step-keyboard {
       display: flex;
@@ -53,7 +87,7 @@
       display: grid;
       grid-template-rows: repeat(4, 1fr);
       gap: 10px;
-      width: 50%;
+      width: 45%;
       background-color: #fff;
       padding: 10px;
       border-radius: 10px;
@@ -114,13 +148,18 @@
     <div class="step-keyboard">
       <!-- 左ブロック -->
       <div class="step-section" id="left-foot">
-        <div class="step-row" id="ball-row"></div>
-        <div class="step-row" id="heel-row"></div>
-        <div class="step-row" id="toe-row"></div>
-        <div class="step-row" id="stamp-row"></div>
+        <div class="step-row" id="left-ball-row"></div>
+        <div class="step-row" id="left-heel-row"></div>
+        <div class="step-row" id="left-toe-row"></div>
+        <div class="step-row" id="left-stamp-row"></div>
       </div>
-      <!-- 右ブロックのためのスペース確保 -->
-      <div class="step-section" id="right-foot"></div>
+      <!-- 右ブロック -->
+      <div class="step-section" id="right-foot">
+        <div class="step-row" id="right-ball-row"></div>
+        <div class="step-row" id="right-heel-row"></div>
+        <div class="step-row" id="right-toe-row"></div>
+        <div class="step-row" id="right-stamp-row"></div>
+      </div>
     </div>
   </div>
 
@@ -184,28 +223,43 @@
     function showStepKeyboard() {
       document.getElementById('card-container').style.display = 'none';
       const keyboardContainer = document.getElementById('step-keyboard-container');
-      keyboardContainer.style.display = 'block';
+      keyboardContainer.style.display = 'flex';
 
-      const rows = {
-        'ball': document.getElementById('ball-row'),
-        'heel (stand)': document.getElementById('heel-row'),
-        'toe': document.getElementById('toe-row'),
-        'stamp': document.getElementById('stamp-row')
+      const leftRows = {
+        'ball': document.getElementById('left-ball-row'),
+        'heel (stand)': document.getElementById('left-heel-row'),
+        'toe': document.getElementById('left-toe-row'),
+        'stamp': document.getElementById('left-stamp-row')
+      };
+
+      const rightRows = {
+        'ball': document.getElementById('right-ball-row'),
+        'heel (stand)': document.getElementById('right-heel-row'),
+        'toe': document.getElementById('right-toe-row'),
+        'stamp': document.getElementById('right-stamp-row')
       };
 
       window.cardData.forEach(card => {
-        if (card[' 足の種類'] === 'left' && rows[card['部位']]) {
-          const cardElement = document.createElement('div');
-          cardElement.classList.add('step-card');
-
-          const img = document.createElement('img');
-          img.src = card.画像;
-          img.alt = card.カード名;
-
-          cardElement.appendChild(img);
-          rows[card['部位']].appendChild(cardElement);
+        if (card[' 足の種類'] === 'left' && leftRows[card['部位']]) {
+          const cardElement = createStepCard(card);
+          leftRows[card['部位']].appendChild(cardElement);
+        } else if (card[' 足の種類'] === 'right' && rightRows[card['部位']]) {
+          const cardElement = createStepCard(card);
+          rightRows[card['部位']].appendChild(cardElement);
         }
       });
+    }
+
+    function createStepCard(card) {
+      const cardElement = document.createElement('div');
+      cardElement.classList.add('step-card');
+
+      const img = document.createElement('img');
+      img.src = card.画像;
+      img.alt = card.カード名;
+
+      cardElement.appendChild(img);
+      return cardElement;
     }
   </script>
 </body>
