--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -11,6 +11,9 @@
       margin: 0;
       padding: 0;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
     }
     h1 {
       background-color: #333;
@@ -23,13 +26,13 @@
       justify-content: center;
       background-color: #444;
       padding: 10px 0;
+      gap: 10px;
     }
     .menu-button {
       background-color: #555;
       color: white;
       border: none;
       padding: 10px 20px;
-      margin: 0 10px;
       border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s;
@@ -37,61 +40,55 @@
     .menu-button:hover {
       background-color: #777;
     }
-    .step-keyboard {
-      display: flex;
-      justify-content: space-around;
-      padding: 20px;
-    }
-    .step-section {
+    #field-container {
       display: grid;
-      grid-template-rows: repeat(4, 1fr);
+      grid-template-columns: repeat(4, 1fr);
       gap: 10px;
-      width: 45%;
-      background-color: #fff;
-      padding: 10px;
+      padding: 20px;
+      justify-items: center;
+      flex: 1;
+      overflow-y: auto;
+    }
+    .field-card {
+      background-color: white;
+      border: 1px solid #ddd;
       border-radius: 10px;
+      width: 100%;
+      max-width: 80px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    .step-row {
+    .keyboard-container {
       display: grid;
-      grid-template-columns: repeat(7, 1fr);
+      grid-template-columns: repeat(14, 1fr);
+      grid-template-rows: repeat(4, 60px);
       gap: 5px;
+      padding: 10px;
+      justify-items: center;
+      background-color: #444;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
     }
-    .step-card {
+    .keyboard-button {
       background-color: #eee;
       border: 1px solid #ccc;
       border-radius: 5px;
-      padding: 5px;
+      width: 100%;
+      max-width: 60px;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       cursor: pointer;
       transition: transform 0.2s;
     }
-    .step-card img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
-    .step-card:hover {
+    .keyboard-button:hover {
       transform: scale(1.05);
       background-color: #ddd;
-    }
-    .back-to-home {
-      position: fixed;
-      top: 50%;
-      right: 20px;
-      transform: translateY(-50%);
-      background-color: #ffcc00;
-      color: black;
-      border: none;
-      padding: 15px 20px;
-      border-radius: 10px;
-      cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.3s, transform 0.3s;
-      z-index: 1000;
-    }
-    .back-to-home:hover {
-      background-color: #ffaa00;
-      transform: translateY(-50%) scale(1.1);
     }
   </style>
 </head>
@@ -99,74 +96,81 @@
   <h1>ステップキーボード</h1>
   <div class="menu-bar">
     <button class="menu-button" onclick="window.location.href='index.html'">カードライブラリーへ戻る</button>
+    <button class="menu-button" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
   </div>
 
-  <div id="step-keyboard-container">
-    <div class="step-keyboard">
-      <!-- 左ブロック -->
-      <div class="step-section" id="left-foot">
-        <div class="step-row" id="left-ball-row"></div>
-        <div class="step-row" id="left-heel-row"></div>
-        <div class="step-row" id="left-toe-row"></div>
-        <div class="step-row" id="left-stamp-row"></div>
-      </div>
-      <!-- 右ブロック -->
-      <div class="step-section" id="right-foot">
-        <div class="step-row" id="right-ball-row"></div>
-        <div class="step-row" id="right-heel-row"></div>
-        <div class="step-row" id="right-toe-row"></div>
-        <div class="step-row" id="right-stamp-row"></div>
-      </div>
-    </div>
-  </div>
+  <h2>フィールド</h2>
+  <div id="field-container"></div>
 
-  <button class="back-to-home" onclick="window.location.href='https://noritap.github.io/tapdance-cardgame/'">タイトル画面に戻る</button>
+  <div class="keyboard-container" id="keyboard-container"></div>
 
   <script>
+    // カードデータを読み込む
     fetch('./tap_dance_card_data_updated.json')
       .then(response => response.json())
       .then(data => {
         window.cardData = data;
-        displayStepKeyboard(data);
+        createKeyboard();
+        mapCardsToButtons(data);
       })
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
-    function displayStepKeyboard(cards) {
-      const leftRows = {
-        'ball': document.getElementById('left-ball-row'),
-        'heel (stand)': document.getElementById('left-heel-row'),
-        'toe': document.getElementById('left-toe-row'),
-        'stamp': document.getElementById('left-stamp-row')
-      };
+    const fieldContainer = document.getElementById('field-container');
 
-      const rightRows = {
-        'ball': document.getElementById('right-ball-row'),
-        'heel (stand)': document.getElementById('right-heel-row'),
-        'toe': document.getElementById('right-toe-row'),
-        'stamp': document.getElementById('right-stamp-row')
-      };
+    // キーボードのボタンを生成
+    function createKeyboard() {
+      const rows = ['A', 'B', 'C', 'D'];
+      const columns = [
+        'left_kick', 'left_pick', 'left_step', 'left_drop', 'left_slide', 'left_hop', 'left_jump',
+        'right_jump', 'right_hop', 'right_slide', 'right_drop', 'right_step', 'right_pick', 'right_kick'
+      ];
 
-      cards.forEach(card => {
-        if (card[' 足の種類'] === 'left' && leftRows[card['部位']]) {
-          const cardElement = createStepCard(card);
-          leftRows[card['部位']].appendChild(cardElement);
-        } else if (card[' 足の種類'] === 'right' && rightRows[card['部位']]) {
-          const cardElement = createStepCard(card);
-          rightRows[card['部位']].appendChild(cardElement);
+      const keyboardContainer = document.getElementById('keyboard-container');
+
+      rows.forEach(row => {
+        columns.forEach(col => {
+          const button = document.createElement('div');
+          button.textContent = `${row}_${col}`;
+          button.classList.add('keyboard-button');
+          keyboardContainer.appendChild(button);
+        });
+      });
+    }
+
+    // ボタンとカードを対応付ける関数
+    function mapCardsToButtons(cards) {
+      document.querySelectorAll('.keyboard-button').forEach(button => {
+        const [row, col] = button.textContent.split('_');
+        const foot = col.startsWith('left') ? 'left' : 'right';
+        const action = col.replace(`${foot}_`, '');
+
+        const partMapping = {
+          'A': 'ball',
+          'B': 'heel',
+          'C': 'toe',
+          'D': 'stamp'
+        };
+
+        const card = cards.find(c => c[' 足の種類'] === foot && c['部位'] === partMapping[row] && c['動作'] === action);
+
+        if (card) {
+          button.dataset.cardId = card.カードID;
+          button.addEventListener('click', () => addCardToField(card));
         }
       });
     }
 
-    function createStepCard(card) {
+    // フィールドにカードを追加する関数
+    function addCardToField(card) {
       const cardElement = document.createElement('div');
-      cardElement.classList.add('step-card');
+      cardElement.classList.add('field-card');
 
       const img = document.createElement('img');
       img.src = card.画像;
       img.alt = card.カード名;
 
       cardElement.appendChild(img);
-      return cardElement;
+      fieldContainer.appendChild(cardElement);
     }
   </script>
 </body>
