--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -120,41 +120,37 @@
     // キーボードのボタンを生成
     function createKeyboard() {
       const rows = ['A', 'B', 'C', 'D'];
-      const columns = [
-        'left_kick', 'left_pick', 'left_step', 'left_drop', 'left_slide', 'left_hop', 'left_jump',
-        'right_jump', 'right_hop', 'right_slide', 'right_drop', 'right_step', 'right_pick', 'right_kick'
-      ];
+      const columns = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14];
 
       const keyboardContainer = document.getElementById('keyboard-container');
 
       rows.forEach(row => {
         columns.forEach(col => {
           const button = document.createElement('div');
-          button.textContent = `${row}_${col}`;
+          button.textContent = `${row}${col}`;
           button.classList.add('keyboard-button');
           keyboardContainer.appendChild(button);
         });
       });
     }
 
+    // ボタンとカードIDのマッピング
+    const buttonMapping = {
+      'A1': 3,   'A2': 4,   'A3': 5,   'A4': 6,   'A5': 7,
+      'A6': 8,   'A7': 9,   'A8': 16,  'A9': 15,  'A10': 14,
+      'A11': 13, 'A12': 12, 'A13': 11, 'A14': 10,
+      'B1': 31,  'B2': 32,  'B3': 33,  'B4': 29,  'B5': 34,
+      'B6': 35,  'B7': 36,  'B8': 42,  'B9': 41,  'B10': 40,
+      'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37
+    };
+
     // ボタンとカードを対応付ける関数
     function mapCardsToButtons(cards) {
       document.querySelectorAll('.keyboard-button').forEach(button => {
-        const [row, col] = button.textContent.split('_');
-        const foot = col.startsWith('left') ? 'left' : 'right';
-        const action = col.replace(`${foot}_`, '');
-
-        const partMapping = {
-          'A': 'ball',
-          'B': 'heel',
-          'C': 'toe',
-          'D': 'stamp'
-        };
-
-        const card = cards.find(c => c[' 足の種類'] === foot && c['部位'] === partMapping[row] && c['動作'] === action);
+        const cardId = buttonMapping[button.textContent];
+        const card = cards.find(c => c.カードID === cardId);
 
         if (card) {
-          button.dataset.cardId = card.カードID;
           button.addEventListener('click', () => addCardToField(card));
         }
       });
