--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -54,7 +54,7 @@
       border: 1px solid #ddd;
       border-radius: 10px;
       width: 100%;
-      max-width: 60px; /* カードサイズを縮小 */
+      max-width: 60px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       display: flex;
       align-items: center;
@@ -154,7 +154,13 @@
       'A11': 13, 'A12': 12, 'A13': 11, 'A14': 10,
       'B1': 31,  'B2': 32,  'B3': 33,  'B4': 29,  'B5': 34,
       'B6': 35,  'B7': 36,  'B8': 42,  'B9': 41,  'B10': 40,
-      'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37
+      'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37,
+      'C1': 17,  'C2': 18,  'C3': 19,  'C4': 1,   'C5': 20,
+      'C6': 21,  'C7': 22,  'C8': 28,  'C9': 27,  'C10': 26,
+      'C11': 1,  'C12': 25, 'C13': 24, 'C14': 23,
+      'D1': 43,  'D2': 44,  'D3': 45,  'D4': 2,   'D5': 46,
+      'D6': 47,  'D7': 48,  'D8': 54,  'D9': 53,  'D10': 53,
+      'D11': 2,  'D12': 51, 'D13': 50, 'D14': 49
     };
 
     // ボタンとカードを対応付ける関数
