--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -48,7 +48,7 @@
       justify-items: center;
       flex: 1;
       overflow-y: auto;
-      padding-bottom: 100px; /* キーボードの高さ分余白を確保 */
+      padding-bottom: 100px;
     }
     .field-card {
       background-color: white;
@@ -58,13 +58,15 @@
       max-width: 60px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start; /* 上揃え */
+      padding: 5px 0;
     }
     .field-card img {
       width: 100%;
       height: auto;
-      object-fit: cover;
+      object-fit: contain;
       border-radius: 10px;
     }
     .keyboard-container {
@@ -137,7 +139,6 @@
   <div class="keyboard-container" id="keyboard-container"></div>
 
   <script>
-    // カードデータを読み込む
     fetch('./tap_dance_card_data_updated.json')
       .then(response => response.json())
       .then(data => {
@@ -148,13 +149,11 @@
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
     const fieldContainer = document.getElementById('field-container');
-    let currentColumns = 4; // デフォルトは4列
+    let currentColumns = 4;
 
-    // キーボードのボタンを生成
     function createKeyboard() {
       const rows = ['A', 'B', 'C', 'D'];
       const columns = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14];
-
       const keyboardContainer = document.getElementById('keyboard-container');
 
       rows.forEach(row => {
@@ -167,23 +166,13 @@
       });
     }
 
-    // ボタンとカードIDのマッピング
     const buttonMapping = {
-      'A1': 3,   'A2': 4,   'A3': 5,   'A4': 6,   'A5': 7,
-      'A6': 8,   'A7': 9,   'A8': 16,  'A9': 15,  'A10': 14,
-      'A11': 13, 'A12': 12, 'A13': 11, 'A14': 10,
-      'B1': 31,  'B2': 32,  'B3': 33,  'B4': 29,  'B5': 34,
-      'B6': 35,  'B7': 36,  'B8': 42,  'B9': 41,  'B10': 40,
-      'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37,
-      'C1': 17,  'C2': 18,  'C3': 19,  'C4': 1,   'C5': 20,
-      'C6': 21,  'C7': 22,  'C8': 28,  'C9': 27,  'C10': 26,
-      'C11': 1,  'C12': 25, 'C13': 24, 'C14': 23,
-      'D1': 43,  'D2': 44,  'D3': 45,  'D4': 2,   'D5': 46,
-      'D6': 47,  'D7': 48,  'D8': 54,  'D9': 53,  'D10': 53,
-      'D11': 2,  'D12': 51, 'D13': 50, 'D14': 49
+      'A1': 3, 'A2': 4, 'A3': 5, 'A4': 6, 'A5': 7, 'A6': 8, 'A7': 9, 'A8': 16, 'A9': 15, 'A10': 14, 'A11': 13, 'A12': 12, 'A13': 11, 'A14': 10,
+      'B1': 31, 'B2': 32, 'B3': 33, 'B4': 29, 'B5': 34, 'B6': 35, 'B7': 36, 'B8': 42, 'B9': 41, 'B10': 40, 'B11': 30, 'B12': 39, 'B13': 38, 'B14': 37,
+      'C1': 17, 'C2': 18, 'C3': 19, 'C4': 1, 'C5': 20, 'C6': 21, 'C7': 22, 'C8': 28, 'C9': 27, 'C10': 26, 'C11': 1, 'C12': 25, 'C13': 24, 'C14': 23,
+      'D1': 43, 'D2': 44, 'D3': 45, 'D4': 2, 'D5': 46, 'D6': 47, 'D7': 48, 'D8': 54, 'D9': 53, 'D10': 53, 'D11': 2, 'D12': 51, 'D13': 50, 'D14': 49
     };
 
-    // ボタンとカードを対応付ける関数
     function mapCardsToButtons(cards) {
       document.querySelectorAll('.keyboard-button').forEach(button => {
         const cardId = buttonMapping[button.dataset.label];
@@ -200,7 +189,6 @@
       });
     }
 
-    // フィールドにカードを追加する関数
     function addCardToField(card) {
       const cardElement = document.createElement('div');
       cardElement.classList.add('field-card');
@@ -213,7 +201,6 @@
       fieldContainer.appendChild(cardElement);
     }
 
-    // フィールドパターンを更新する関数
     function updateFieldPattern() {
       const pattern = document.getElementById('pattern').value;
       const customInput = document.getElementById('custom-columns');
