--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -10,10 +10,10 @@
       background-color: #f9f9f9;
       margin: 0;
       padding: 0;
-      text-align: center;
       display: flex;
       flex-direction: column;
       height: 100vh;
+      overflow: hidden;
     }
     .menu-bar {
       display: flex;
@@ -40,15 +40,36 @@
       font-size: 1.2rem;
       margin: 0;
     }
+    .content-container {
+      display: flex;
+      flex: 1;
+      overflow: hidden;
+    }
+    .line-numbers {
+      width: 30px;
+      background-color: #ddd;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 10px;
+      font-size: 0.9rem;
+      color: #333;
+    }
+    .line-numbers div {
+      height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
     #field-container {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
       gap: 10px;
       padding: 20px;
       justify-items: center;
-      flex: 1;
       overflow-y: auto;
-      padding-bottom: 100px;
+      height: calc(100vh - 200px);
+      flex: 1;
     }
     .field-card {
       background-color: white;
@@ -60,7 +81,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start; /* 上揃え */
+      justify-content: flex-start;
       padding: 5px 0;
     }
     .field-card img {
@@ -134,7 +155,10 @@
     <input type="number" id="custom-columns" min="1" max="16" value="4" style="display:none;" onchange="updateFieldPattern()">
   </div>
 
-  <div id="field-container"></div>
+  <div class="content-container">
+    <div class="line-numbers" id="line-numbers"></div>
+    <div id="field-container"></div>
+  </div>
 
   <div class="keyboard-container" id="keyboard-container"></div>
 
@@ -145,10 +169,12 @@
         window.cardData = data;
         createKeyboard();
         mapCardsToButtons(data);
+        updateLineNumbers(4);
       })
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
     const fieldContainer = document.getElementById('field-container');
+    const lineNumbersContainer = document.getElementById('line-numbers');
     let currentColumns = 4;
 
     function createKeyboard() {
@@ -199,6 +225,8 @@
 
       cardElement.appendChild(img);
       fieldContainer.appendChild(cardElement);
+
+      updateLineNumbers(Math.ceil(fieldContainer.childElementCount / currentColumns));
     }
 
     function updateFieldPattern() {
@@ -213,6 +241,16 @@
         currentColumns = parseInt(pattern);
       }
       fieldContainer.style.gridTemplateColumns = `repeat(${currentColumns}, 1fr)`;
+      updateLineNumbers(4);
+    }
+
+    function updateLineNumbers(lines) {
+      lineNumbersContainer.innerHTML = '';
+      for (let i = 1; i <= lines; i++) {
+        const lineNumber = document.createElement('div');
+        lineNumber.textContent = `${i}段目`;
+        lineNumbersContainer.appendChild(lineNumber);
+      }
     }
   </script>
 </body>
