--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -40,49 +40,47 @@
       font-size: 1.2rem;
       margin: 0;
     }
-    .content-container {
+    .pattern-selector {
       display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      margin: 10px 0;
+    }
+    .pattern-selector label, .pattern-selector select, .pattern-selector input {
+      font-size: 1rem;
+    }
+    .field-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
       flex: 1;
       overflow: hidden;
+      padding: 10px;
     }
-    .line-numbers {
-      width: 30px;
-      background-color: #ddd;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 10px;
-      font-size: 0.9rem;
-      color: #333;
-    }
-    .line-numbers div {
-      height: 80px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    #field-container {
+    .field-box {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
+      grid-template-rows: repeat(4, 80px);
       gap: 10px;
-      padding: 20px;
-      justify-items: center;
-      overflow-y: auto;
-      height: calc(100vh - 200px);
-      flex: 1;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      padding: 10px;
+      background-color: #fff;
+    }
+    .field-row {
+      display: grid;
+      gap: 10px;
     }
     .field-card {
       background-color: white;
       border: 1px solid #ddd;
       border-radius: 10px;
-      width: 100%;
-      max-width: 60px;
+      width: 60px;
+      height: 80px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       display: flex;
-      flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      padding: 5px 0;
+      justify-content: center;
     }
     .field-card img {
       width: 100%;
@@ -128,13 +126,6 @@
       transform: scale(1.05);
       background-color: #ddd;
     }
-    .pattern-selector {
-      margin: 10px 0;
-    }
-    .pattern-selector label, .pattern-selector select, .pattern-selector input {
-      font-size: 1rem;
-      margin: 5px;
-    }
   </style>
 </head>
 <body>
@@ -155,9 +146,13 @@
     <input type="number" id="custom-columns" min="1" max="16" value="4" style="display:none;" onchange="updateFieldPattern()">
   </div>
 
-  <div class="content-container">
-    <div class="line-numbers" id="line-numbers"></div>
-    <div id="field-container"></div>
+  <div class="field-wrapper">
+    <div class="field-box" id="field-box">
+      <div class="field-row"></div>
+      <div class="field-row"></div>
+      <div class="field-row"></div>
+      <div class="field-row"></div>
+    </div>
   </div>
 
   <div class="keyboard-container" id="keyboard-container"></div>
@@ -169,12 +164,11 @@
         window.cardData = data;
         createKeyboard();
         mapCardsToButtons(data);
-        updateLineNumbers(4);
+        updateFieldPattern();
       })
       .catch(error => console.error('データの読み込みに失敗しました:', error));
 
-    const fieldContainer = document.getElementById('field-container');
-    const lineNumbersContainer = document.getElementById('line-numbers');
+    const fieldBox = document.getElementById('field-box');
     let currentColumns = 4;
 
     function createKeyboard() {
@@ -216,17 +210,21 @@
     }
 
     function addCardToField(card) {
-      const cardElement = document.createElement('div');
-      cardElement.classList.add('field-card');
+      const rows = fieldBox.querySelectorAll('.field-row');
+      for (let row of rows) {
+        if (row.children.length < currentColumns) {
+          const cardElement = document.createElement('div');
+          cardElement.classList.add('field-card');
 
-      const img = document.createElement('img');
-      img.src = card.画像;
-      img.alt = card.カード名;
+          const img = document.createElement('img');
+          img.src = card.画像;
+          img.alt = card.カード名;
 
-      cardElement.appendChild(img);
-      fieldContainer.appendChild(cardElement);
-
-      updateLineNumbers(Math.ceil(fieldContainer.childElementCount / currentColumns));
+          cardElement.appendChild(img);
+          row.appendChild(cardElement);
+          return;
+        }
+      }
     }
 
     function updateFieldPattern() {
@@ -240,17 +238,11 @@
         customInput.style.display = 'none';
         currentColumns = parseInt(pattern);
       }
-      fieldContainer.style.gridTemplateColumns = `repeat(${currentColumns}, 1fr)`;
-      updateLineNumbers(4);
-    }
 
-    function updateLineNumbers(lines) {
-      lineNumbersContainer.innerHTML = '';
-      for (let i = 1; i <= lines; i++) {
-        const lineNumber = document.createElement('div');
-        lineNumber.textContent = `${i}段目`;
-        lineNumbersContainer.appendChild(lineNumber);
-      }
+      const rows = fieldBox.querySelectorAll('.field-row');
+      rows.forEach(row => {
+        row.style.gridTemplateColumns = `repeat(${currentColumns}, 1fr)`;
+      });
     }
   </script>
 </body>
