--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -55,7 +55,7 @@
       justify-content: center;
       align-items: flex-start;
       flex: 1;
-      overflow: hidden;
+      overflow-x: auto;
       padding: 10px;
     }
     .field-box {
@@ -70,6 +70,17 @@
     .field-row {
       display: grid;
       gap: 10px;
+    }
+    .field-slot {
+      background-color: #e0e0e0;
+      border: 2px dashed #bbb;
+      border-radius: 10px;
+      width: 60px;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background-color 0.2s;
     }
     .field-card {
       background-color: white;
@@ -213,16 +224,19 @@
       const rows = fieldBox.querySelectorAll('.field-row');
       for (let row of rows) {
         if (row.children.length < currentColumns) {
-          const cardElement = document.createElement('div');
-          cardElement.classList.add('field-card');
+          const slot = row.querySelector('.field-slot');
+          if (slot) {
+            const cardElement = document.createElement('div');
+            cardElement.classList.add('field-card');
 
-          const img = document.createElement('img');
-          img.src = card.画像;
-          img.alt = card.カード名;
+            const img = document.createElement('img');
+            img.src = card.画像;
+            img.alt = card.カード名;
 
-          cardElement.appendChild(img);
-          row.appendChild(cardElement);
-          return;
+            cardElement.appendChild(img);
+            row.replaceChild(cardElement, slot);
+            return;
+          }
         }
       }
     }
@@ -241,7 +255,13 @@
 
       const rows = fieldBox.querySelectorAll('.field-row');
       rows.forEach(row => {
+        row.innerHTML = '';
         row.style.gridTemplateColumns = `repeat(${currentColumns}, 1fr)`;
+        for (let i = 0; i < currentColumns; i++) {
+          const slot = document.createElement('div');
+          slot.classList.add('field-slot');
+          row.appendChild(slot);
+        }
       });
     }
   </script>
