--- a/step_keyboard.html
+++ b/step_keyboard.html
@@ -61,15 +61,15 @@
     .field-box {
       display: grid;
       grid-template-rows: repeat(4, 80px);
-      gap: 8px; /* 間隔を少し詰める */
+      gap: 8px;
       border: 2px solid #ccc;
       border-radius: 10px;
-      padding: 8px; /* 全体の余白も少し詰める */
+      padding: 8px;
       background-color: #fff;
     }
     .field-row {
       display: grid;
-      gap: 6px; /* 横のカード間隔を詰める */
+      gap: 6px;
     }
     .field-slot {
       background-color: #e0e0e0;
@@ -101,7 +101,7 @@
     }
     .keyboard-container {
       display: grid;
-      grid-template-columns: repeat(14, 1fr);
+      grid-template-columns: repeat(14, minmax(40px, 1fr)); /* 最小幅を設定して切れないように */
       grid-template-rows: repeat(4, 60px);
       gap: 5px;
       padding: 10px;
@@ -121,14 +121,16 @@
       max-width: 60px;
       height: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start; /* 上揃えに変更 */
       cursor: pointer;
       transition: transform 0.2s;
       overflow: hidden;
+      padding-top: 5px; /* 上の余白を追加 */
     }
     .keyboard-button img {
-      width: 100%;
+      width: 80%;
       height: auto;
       object-fit: cover;
       border-radius: 5px;
@@ -140,16 +142,15 @@
 
     /* iPhone対応のサイズ調整 */
     @media (max-width: 768px) {
-      .field-slot, .field-card {
-        width: calc((100vw - 70px) / 8); /* 間隔を詰めて8枚収める */
-        height: calc(((100vw - 70px) / 8) * 1.33);
+      .keyboard-container {
+        grid-template-columns: repeat(14, minmax(35px, 1fr)); /* iPhone用にさらに最小幅を調整 */
       }
-      .field-box {
-        gap: 6px;
-        padding: 6px;
+      .keyboard-button {
+        max-width: 50px;
+        padding-top: 3px;
       }
-      .field-row {
-        gap: 4px;
+      .keyboard-button img {
+        width: 75%;
       }
     }
   </style>
